# device-scanner

./: .deploy_bintray.json  .dockerignore  .gitignore  .npmignore  .travis.yml  Base.fsproj  Cargo.toml  Dockerfile  README.md  Vagrantfile  build.fsx  device-mapper-serializer.js  device-scanner-daemon-dev.patch  device-scanner.fsproj  device-scanner.sln  device-scanner.spec  dotnet-setup.sh  hosts  id_rsa  id_rsa.pub  iml-device-scanner.spec  iml-device-scanner.spec.template  jest.config.js  jest.setup.js  lerna.json  mock-build.sh  mount-emitter-dev.patch  object-serializer.js  package-lock.json  package.json  paket.dependencies  results.xml  rollup-config.js  test.sh  udev-serializer.js  uevent-listener-dev.patch
.copr/: Makefile
.github/workflows/: ci.yml
.paket/: Paket.Restore.targets
IML/: Common.fs  JsonDecoders.fs  Maybe.fs  MaybeTest.fs  NodeHelpers.fs  NodeHelpersTest.fs  StringUtils.fs
IML.CommonLibrary/src/: Main.fs
IML.CommonLibrary/test/: MainTest.fs  paket.references
IML.DeviceAggregatorDaemon/src/: App.fs  CommonLibrary.fs  Devtree.fs  Handlers.fs  Heartbeats.fs  IML.DeviceAggregatorDaemon.fsproj  LegacyParser.fs  Query.fs  Server.fs  paket.references
IML.DeviceAggregatorDaemon/systemd-units/: device-aggregator.service  device-aggregator.socket
IML.DeviceAggregatorDaemon/test/: AppTest.fs  HandlersTest.fs  HeartbeatsTest.fs  IML.DeviceAggregatorDaemonTest.fsproj  TestFixtures.fs
IML.DeviceScannerDaemon/: README.md
IML.DeviceScannerDaemon/src/: CommonLibrary.fs  Connections.fs  Handlers.fs  IML.DeviceScannerDaemon.fsproj  Main.fs  Mount.fs  Server.fs  Udev.fs  Zed.fs
IML.DeviceScannerDaemon/systemd-units/: block-device-populator.service  device-scanner.service  device-scanner.target  zed-populator.service
IML.DeviceScannerDaemon/test/: ConnectionsTest.fs  HandlersTest.fs  IML.DeviceScannerDaemonTest.fsproj  MountTest.fs  TestFixtures.fs  UdevTest.fs  ZedTest.fs
IML.IntegrationTest/: Device.fs  Filesystem.fs  IML.IntegrationTest.fsproj  ISCSIAdm.fs  IntegrationTest.fs  IntegrationTestFramework.fs  LVM.fs  MdRaid.fs  Parted.fs  StatefulPromise.fs  UdevSerializer.fs  VagrantTestFramework.fs  jest.config.js
IML.IntegrationTest/__snapshots__/: IntegrationTest.fs.snap
IML.IntegrationTest/source/: IML.IntegrationTestFramework.fsproj  IntegrationTestFramework.fs
IML.IntegrationTest/test/: IML.IntegrationTest.fsproj  IntegrationTest.fs
IML.IntegrationTestFramework/source/: IML.IntegrationTestFramework.fsproj  IntegrationTestFramework.fs
IML.IntegrationTestFramework/test/: IntegrationTest.fs  jest.config.js
IML.Listeners/: CommonLibrary.fs
IML.Listeners/HistoryEventZedlet/: Main.fs
IML.Listeners/PoolCreateZedlet/: Main.fs
IML.Listeners/PoolDestroyZedlet/: Main.fs
IML.Listeners/PoolExportZedlet/: Main.fs
IML.Listeners/PoolImportZedlet/: Main.fs
IML.Listeners/UdevListener/: Main.fs
IML.Listeners/VdevAddZedlet/: Main.fs
IML.ScannerProxyDaemon/: README.md
IML.ScannerProxyDaemon/src/: Config.fs  ConfigParser.fs  Handlers.fs  IML.ScannerProxyDaemon.fsproj  Main.fs  ProxyHandlers.fs  Transmit.fs
IML.ScannerProxyDaemon/systemd-units/: scanner-proxy.path  scanner-proxy.service
IML.ScannerProxyDaemon/test/: HandlersTest.fs  IML.ScannerProxyDaemonTest.fsproj  TransmitTest.fs
IML.StatefulMonad/source/: StatefulPromise.fs  paket.references
IML.StatefulMonad/test/: IML.StatefulMonadTest.fsproj  StatefulPromiseTest.fs  jest.config.js
IML.StatefulPromise/source/: StatefulPromise.fs  paket.references
IML.StatefulPromise/test/: StatefulPromiseTest.fs
IML.Types/: jest.config.js
IML/Test/: VagrantTest.fs  (+1 more)
device-aggregator/: Cargo.toml
device-aggregator/src/: aggregator_error.rs  cache.rs  dag.rs  db.rs  env.rs  lib.rs  linux_plugin_transforms.rs  main.rs  schema.rs
device-aggregator/src/snapshots/: tests__devtree2linuxoutput.snap  tests__devtree2linuxoutput_dataset.snap  tests__devtree2linuxoutput_zpool.snap  tests__linux_plugin_transforms::tests::test_devtree2linuxoutput.snap  tests__linux_plugin_transforms::tests::test_devtree2linuxoutput_dataset.snap  tests__linux_plugin_transforms::tests::test_devtree2linuxoutput_zpool.snap
device-aggregator/systemd-units/: device-aggregator.service
device-aggregator/tests/: dag_tests.rs  output.json
device-scanner-daemon/: Cargo.toml
device-scanner-daemon/src/: connections.rs  daemon.rs  error.rs  flush_tracker.rs  lib.rs  main.rs  state.rs  writer.rs
device-scanner-daemon/src/libs/: connections.rs  error.rs  mod.rs  state.rs
device-scanner-daemon/src/reducers/: mod.rs  mount.rs  udev.rs  zed.rs
device-scanner-daemon/src/reducers/snapshots/: tests__reducers::mount::tests::test_mount_update.snap
device-scanner-daemon/systemd-units/: device-scanner.service  device-scanner.target  zed-populator.service
device-scanner-daemon/tests/: connection_tests.rs  mock_stream.rs
device-scanner-proxy/: Cargo.toml
device-scanner-proxy/src/: lib.rs  main.rs
device-scanner-proxy/systemd-units/: scanner-proxy.path  scanner-proxy.service
device-scanner-zedlets/: Cargo.toml
device-types/: Cargo.toml
device-types/src/: devices.rs  lib.rs  udev.rs  uevent.rs
device-types/src/snapshots/: tests__device_path_ordering.snap  tests__tests::test_device_path_ordering.snap
futures-failure/: Cargo.toml
iml-device-fns/: Cargo.toml
mount-emitter/: Cargo.toml
mount-emitter/src/: lib.rs
mount-emitter/src/snapshots/: tests__tests::test_line_to_hashmap_mount.snap  tests__tests::test_line_to_hashmap_swap.snap  tests__tests::test_list_mount.snap  tests__tests::test_poll_mount.snap  tests__tests::test_poll_move.snap  tests__tests::test_poll_remount.snap  tests__tests::test_poll_umount.snap  tests__tests::test_swap.snap  tests__tests::test_swap_extra.snap
mount-emitter/tests/: .snapfile  integration_tests.rs
nginx/: manager-proxy.conf
paket-files/: paket.restore.cached
uevent-listener/: Cargo.toml
zed-enhancer/: Cargo.toml
zed-enhancer/src/: lib.rs  main.rs
zed-enhancer/systemd-units/: 00-zed-enhancer.preset  zed-enhancer.service  zed-enhancer.socket  zed-populator.service
(+71 files in other folders)
