[package]
name = "device-aggregator"
version = "2.0.0"
authors = ["IML Team <iml@whamcloud.com>"]

[dependencies]
tokio = "0.1"
futures = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
device-types = { path = "../device-types", version = "0.1.0" }


[dev-dependencies]
pretty_assertions = "0.5"
tokio-mockstream = "1.1"
