[package]
name = "device-aggregator"
version = "2.0.0"
authors = ["IML Team <iml@whamcloud.com>"]
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
tokio = "0.1"
futures = "0.1"
warp = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
device-types = { path = "../device-types", version = "0.1.0" }


[dev-dependencies]
pretty_assertions = "0.6.1"
tokio-mockstream = "1.1"
