[package]
name = "device-scanner-daemon"
version = "2.0.0"
description = "device-scanner-daemon builds an in-memory representation of devices using udev, zed and findmnt"
authors = ["IML Team <iml@whamcloud.com>"]


[dependencies]
tokio = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
bytes = { version = "0.4", features = ["serde"] }
im = { version = "12.0.0", features = ["serde"] }
device-types = { path = "../device-types", version = "0.1.0" }
libzfs-types = "0.1.1"

[dev-dependencies]
pretty_assertions = "0.5"
