[package]
name = "device-scanner-daemon"
version = "2.0.0"
description = "device-scanner-daemon builds an in-memory representation of devices using udev, zed and findmnt"
authors = ["IML Team <iml@whamcloud.com>"]
license = "MIT"
edition = "2018"

[dependencies]
bytes = { version = "0.4", features = ["serde"] }
device-types = { path = "../device-types", version = "0.1.0" }
futures-preview = "0.3.0-alpha.19"
im = { version = "13.0", features = ["serde"] }
libsystemd = "0.2.1"
libzfs-types = { git = "https://github.com/whamcloud/rust-libzfs.git", version = "0.1.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.14"
tokio = "0.2.0-alpha.6"
tracing = "0.1"
tracing-subscriber = "0.1"

[dev-dependencies]
insta = "0.12"
