[package]
name = "device-scanner-proxy"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]
license = "MIT"

[dependencies]
tokio = "0.1"
tokio-tls = "0.2.0"
native-tls = "0.2.2"
futures = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.3"
futures-failure = { path = "../futures-failure", version = "0.1.0" }
device-types = { path = "../device-types", version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "0.5"
tokio-mockstream = "1.1"
