[package]
name = "device-scanner-proxy"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]
license = "MIT"
edition = "2018"

[dependencies]
tokio = "0.1"
tokio-tls = "0.2.1"
native-tls = "0.2.3"
lazy_static = "1.3.0"
futures = "0.1"
hyper = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1.5"
futures-failure = { path = "../futures-failure", version = "0.1.0" }
device-types = { path = "../device-types", version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "0.6"
tokio-mockstream = "1.1"
