[package]
name = "device-types"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]
description = "shared device types used throughout device-scanner and IML"
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
libzfs-types = "0.1.1"
im = { version = "12.0.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.5"
serde_json = "1.0"
