[package]
name = "device-types"
version = "0.1.1"
authors = ["IML Team <iml@whamcloud.com>"]
description = "shared device types used throughout device-scanner and IML"
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
libzfs-types = "0.1.1"
im = { version = "13.0", features = ["serde"] }
log = "0.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
serde_json = "1.0"
insta = "0.10"
