[package]
name = "mount-emitter"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]

[[bin]]
path = "src/bin/mount_emitter.rs"
name = "mount-emitter"

[dependencies]
device-types = { path = "../device-types", version = "0.1.0" }
serde_json = "1.0"
tokio = "0.1"
tokio-file-unix = "0.5.1"
futures = "0.1"

[dev-dependencies]
pretty_assertions = "0.5"
snaptest = "0.2"
tokio-mockstream = "1.1"
