[package]
name = "zed-enhancer"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]

[dependencies]
tokio = "0.1"
futures = "0.1"
derive_more = "0.13.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.5"
device-types = { path = "../device-types", version = "0.1.0" }
libzfs-types = { git = "https://github.com/whamcloud/rust-libzfs", branch = "skip-nvpair-sys-build" }
libzfs = { git = "https://github.com/whamcloud/rust-libzfs", branch = "skip-nvpair-sys-build" }